# rc5

./: Cargo.toml  rust-toolchain.toml
src/: control_block.rs  decoder.rs  dynamic.rs  encoder.rs  io.rs  io_impl.rs  iter_decoder.rs  iter_encoder.rs  iter_impl.rs  lib.rs
tests/: bundled.rs
