[package]
name = "rc5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = "1.12.1"
itertools = "0.10.5"
libmath = "0.2.1"
num = "0.4.0"
static_assertions = "1.1.0"
tap = "1.0.1"
thiserror = "1.0.37"
zeroize = { version = "1.5.7", features = ["derive"] }
