[package]
name = "rc5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
num = "0.4.0"
smallvec = "1.10.0"
static_assertions = "1.1.0"
thiserror = "1.0.37"
zeroize = { version = "1.5.7", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.65"
hex = "0.4.3"
